# Check-number

./: CMakeLists.txt  QtConsoleApplication14.sln  README.md
QtConsoleApplication14/: QtConsoleApplication14.vcxproj  QtConsoleApplication14.vcxproj.filters  main.cpp  window.cpp  window.h  window.ui
QtConsoleApplication14/x64/Debug/: QtConsoleApplication14.exe.recipe
QtConsoleApplication14/x64/Debug/QtConsol.80C0FCE7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QtConsoleApplication14.lastbuildstate  QtConsoleApplication14.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QtConsoleApplication14/x64/Debug/moc/: moc_window.cpp
QtConsoleApplication14/x64/Debug/qmake/: qtvars_x64_Debug.props
QtConsoleApplication14/x64/Debug/uic/: ui_window.h
QtConsoleApplication14/x64/Release/qmake/: qtvars_x64_Release.props
x64/Debug/: QtConsoleApplication14.ilk
